eth: Use fixed IP instead of DHCP

--- a/example_eth/example_eth.ioc
+++ b/example_eth/example_eth.ioc
@@ -29,6 +29,7 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 RCC.AHB4Freq_Value=200000000
 RCC.VCOInput3Freq_Value=500000
+LWIP.NETMASK_ADDRESS=255.255.255.000
 RCC.LPTIM1Freq_Value=100000000
 Mcu.IP4=LWIP
 Mcu.IP5=NVIC
@@ -44,7 +45,7 @@ CORTEX_M7.IsBufferable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS
 Mcu.UserConstants=
 RCC.DIVP3Freq_Value=32250000
 RCC.SDMMCFreq_Value=400000000
-LWIP.IPParameters=MEM_SIZE
+LWIP.IPParameters=MEM_SIZE,LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS
 Mcu.ThirdPartyNb=0
 NVIC.TIM17_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 RCC.HCLKFreq_Value=200000000
@@ -132,6 +133,7 @@ RCC.Tim2OutputFreq_Value=200000000
 PC4.Mode=RMII
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 RCC.DFSDMACLkFreq_Value=400000000
+LWIP.IP_ADDRESS=192.168.010.002
 RCC.VCO3OutputFreq_Value=64500000
 PA2.Locked=true
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
@@ -153,6 +155,7 @@ PC4.Signal=ETH_RXD0
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 ProjectManager.DefaultFWLocation=true
+LWIP.LWIP_DHCP=0
 PB12.Locked=true
 ProjectManager.DeletePrevious=true
 RCC.QSPIFreq_Value=200000000
