--- a/example_eth/example_eth.ioc
+++ b/example_eth/example_eth.ioc
@@ -14,8 +14,10 @@ PC10.Signal=UART4_TX
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC5.Locked=true
 CORTEX_M7.TypeExtField-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_TEX_LEVEL1
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_UART4_Init-UART4-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_UART4_Init-UART4-false-HAL-true,4-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+PJ3.GPIOParameters=GPIO_Label
 RCC.RTCFreq_Value=32000
+PJ6.GPIO_Label=SEGG
 PA15\ (JTDI).Signal=DEBUG_JTDI
 RCC.CpuClockFreq_Value=400000000
 RCC.VCO2OutputFreq_Value=64500000
@@ -23,7 +25,9 @@ PC5.Mode=RMII
 PC1.Locked=true
 PB11.Signal=ETH_TX_EN
 PB13.Signal=ETH_TXD1
+PJ2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
+PJ5.GPIO_Label=SEGF
 RCC.MCO1PinFreq_Value=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
@@ -31,17 +35,21 @@ RCC.AHB4Freq_Value=200000000
 RCC.VCOInput3Freq_Value=500000
 LWIP.NETMASK_ADDRESS=255.255.255.000
 RCC.LPTIM1Freq_Value=100000000
+PJ6.Locked=true
 Mcu.IP4=LWIP
+PJ6.Signal=GPIO_Output
 Mcu.IP5=NVIC
 Mcu.IP2=ETH
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 Mcu.IP3=FREERTOS
 Mcu.IP0=CORTEX_M7
-PA15\ (JTDI).Mode=JTAG_5_pins
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA15\ (JTDI).Mode=JTAG_5_pins
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_ENABLE
 Mcu.IP1=DEBUG
+PJ13.GPIO_Label=BTN2
 CORTEX_M7.IsBufferable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_BUFFERABLE
+PJ2.Signal=GPIO_Output
 Mcu.UserConstants=
 RCC.DIVP3Freq_Value=32250000
 RCC.SDMMCFreq_Value=400000000
@@ -57,8 +65,9 @@ RCC.DIVQ3Freq_Value=32250000
 Mcu.Pin6=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin7=PB3 (JTDO/TRACESWO)
 Mcu.Pin8=PA13 (JTMS/SWDIO)
-Mcu.Pin9=PH1-OSC_OUT (PH1)
+Mcu.Pin9=PJ12
 FREERTOS.IPParameters=Tasks01,FootprintOK
+PJ2.Locked=true
 PB13.Locked=true
 Mcu.Pin0=PC10
 Mcu.Pin1=PA15 (JTDI)
@@ -76,6 +85,7 @@ RCC.HSE_VALUE=16000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 LWIP0.BSP.condition=
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PJ12.GPIOParameters=GPIO_Label
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 RCC.DIVM1=1
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.8.0
@@ -86,8 +96,11 @@ LWIP.MEM_SIZE=16360
 ProjectManager.BackupPrevious=false
 RCC.FMCFreq_Value=200000000
 VP_SYS_VS_tim17.Signal=SYS_VS_tim17
+PJ1.GPIOParameters=GPIO_Label
+PJ7.GPIO_Label=SEGDP
 RCC.USART16Freq_Value=100000000
 File.Version=6
+PJ12.GPIO_Label=BTN1
 PA14\ (JTCK/SWCLK).Mode=JTAG_5_pins
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
@@ -103,19 +116,26 @@ LWIP0.BSP.i2creg=
 LWIP0.BSP.component=LAN8742
 RCC.MCO2PinFreq_Value=400000000
 Mcu.Package=TFBGA240
+PJ13.Locked=true
 PB12.Mode=RMII
 PA7.Locked=true
 NVIC.TimeBase=TIM17_IRQn
 RCC.D1PPRE=RCC_APB3_DIV2
+PJ12.Signal=GPIO_Input
+PJ5.GPIOParameters=GPIO_Label
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region1_Settings=0x30040000
 ProjectManager.ToolChainLocation=
+PJ4.Signal=GPIO_Output
 NVIC.TimeBaseIP=TIM17
+PJ3.Locked=true
 FREERTOS.FootprintOK=true
+PJ1.Signal=GPIO_Output
 RCC.DFSDMFreq_Value=100000000
 RCC.DIVR1Freq_Value=400000000
 PC11.Mode=Asynchronous
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_256B
 PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
+PJ3.GPIO_Label=SEGD
 RCC.TraceFreq_Value=400000000
 RCC.APB4Freq_Value=100000000
 RCC.CECFreq_Value=32000
@@ -126,10 +146,13 @@ PC4.Locked=true
 RCC.LPUART1Freq_Value=100000000
 PC5.Signal=ETH_RXD1
 PB13.Mode=RMII
+PJ13.GPIOParameters=GPIO_Label
+PJ0.Locked=true
 CORTEX_M7.IsShareable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_SHAREABLE
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 ProjectManager.CustomerFirmwarePackage=
 RCC.Tim2OutputFreq_Value=200000000
+PJ1.GPIO_Label=SEGB
 PC4.Mode=RMII
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 RCC.DFSDMACLkFreq_Value=400000000
@@ -139,11 +162,11 @@ PA2.Locked=true
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 ProjectManager.ProjectFileName=example_eth.ioc
 CORTEX_M7.CPU_ICache=Enabled
-FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myBlinkTask,-3,256,blinkLED,Default,NULL,Dynamic,NULL,NULL
 PA7.Mode=RMII
 LWIP0.BSP.i2caddr=0
 PA13\ (JTMS/SWDIO).Mode=JTAG_5_pins
-Mcu.PinsNb=23
+Mcu.PinsNb=33
 ProjectManager.NoMain=false
 VP_SYS_VS_tim17.Mode=TIM17
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -169,6 +192,9 @@ RCC.D1CPREFreq_Value=400000000
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 CORTEX_M7.MPU_Control=MPU_PRIVILEGED_DEFAULT
 RCC.USART234578Freq_Value=100000000
+PJ7.Signal=GPIO_Output
+PJ3.Signal=GPIO_Output
+PJ5.Locked=true
 RCC.SPI45Freq_Value=100000000
 RCC.Tim1OutputFreq_Value=200000000
 RCC.SPI123Freq_Value=400000000
@@ -188,7 +214,9 @@ PA1.Signal=ETH_REF_CLK
 RCC.CKPERFreq_Value=64000000
 LWIP0.BSP.ip=
 LWIP0.BSP.semaphore=
+PJ6.GPIOParameters=GPIO_Label
 board=custom
+PJ4.GPIO_Label=SEGE
 ProjectManager.LastFirmware=true
 RCC.VCOInput1Freq_Value=16000000
 NVIC.SavedSystickIrqHandlerGenerated=true
@@ -197,67 +225,87 @@ RCC.APB2Freq_Value=100000000
 PA1.Mode=RMII
 MxCube.Version=6.1.1
 RCC.FDCANFreq_Value=400000000
+PJ4.GPIOParameters=GPIO_Label
 PA1.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 RCC.RNGFreq_Value=48000000
+Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V1
 RCC.ADCFreq_Value=32250000
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_FULL_ACCESS
+Mcu.Pin31=VP_LWIP_VS_Enabled
+Mcu.Pin32=VP_SYS_VS_tim17
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PB4\ (NJTRST).Mode=JTAG_5_pins
 ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+PJ0.Signal=GPIO_Output
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32H743XIHx
 RCC.LPTIM2Freq_Value=100000000
+PJ1.Locked=true
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_32KB
+Mcu.Pin26=PC5
+Mcu.Pin27=PJ3
 NVIC.SavedPendsvIrqHandlerGenerated=true
 PA2.Signal=ETH_MDIO
+Mcu.Pin24=PJ2
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_FULL_ACCESS
 ProjectManager.UnderRoot=false
+Mcu.Pin25=PB12
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,MPU_Control,Enable-Cortex_Memory_Protection_Unit_Region0_Settings,TypeExtField-Cortex_Memory_Protection_Unit_Region0_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings,Size-Cortex_Memory_Protection_Unit_Region0_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings,DisableExec-Cortex_Memory_Protection_Unit_Region0_Settings,Enable-Cortex_Memory_Protection_Unit_Region1_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region1_Settings,Size-Cortex_Memory_Protection_Unit_Region1_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region1_Settings,DisableExec-Cortex_Memory_Protection_Unit_Region1_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region1_Settings,IsBufferable-Cortex_Memory_Protection_Unit_Region1_Settings
 Mcu.IP8=UART4
+Mcu.Pin28=PJ4
 Mcu.IP6=RCC
+Mcu.Pin29=PB13
 Mcu.IP7=SYS
 ProjectManager.CoupleFile=true
 RCC.SYSCLKFreq_VALUE=400000000
-Mcu.Pin22=VP_SYS_VS_tim17
+Mcu.Pin22=PJ5
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 RCC.I2C123Freq_Value=100000000
+Mcu.Pin23=PC4
+Mcu.Pin20=PB11
 PA1.Locked=true
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin21=VP_LWIP_VS_Enabled
+Mcu.Pin21=PA7
+PJ0.GPIOParameters=GPIO_Label
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 LWIP.BSP.number=1
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PJ5.Signal=GPIO_Output
 ProjectManager.CompilerOptimize=6
+PJ4.Locked=true
+PJ0.GPIO_Label=SEGA
+PJ7.Locked=true
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA7
+Mcu.Pin15=PA1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+Mcu.Pin16=PJ0
 LWIP.Version=v2.1.2_Cube
-Mcu.Pin16=PC4
-Mcu.Pin13=PA1
-Mcu.Pin14=PB11
-Mcu.Pin19=PB13
+Mcu.Pin13=PC1
+Mcu.Pin14=PA2
+Mcu.Pin19=PJ1
 RCC.LPTIM345Freq_Value=100000000
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB12
-Mcu.Pin18=PC5
+Mcu.Pin17=PJ7
+Mcu.Pin18=PJ6
 RCC.LTDCFreq_Value=32250000
 RCC.SAI4AFreq_Value=400000000
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PC1
-Mcu.Pin12=PA2
+Mcu.Pin11=PH1-OSC_OUT (PH1)
+Mcu.Pin12=PH0-OSC_IN (PH0)
 PB3\ (JTDO/TRACESWO).Mode=JTAG_5_pins
-Mcu.Pin10=PH0-OSC_IN (PH0)
+Mcu.Pin10=PJ13
 RCC.DIVQ1Freq_Value=400000000
 PA2.Mode=RMII
+PJ7.GPIOParameters=GPIO_Label
 RCC.D3PPRE=RCC_APB4_DIV2
 CORTEX_M7.CPU_DCache=Enabled
 LWIP0.BSP.name=Driver_PHY
 RCC.HCLK3ClockFreq_Value=200000000
 RCC.VCOInput2Freq_Value=500000
 RCC.APB1Freq_Value=100000000
+PJ2.GPIO_Label=SEGC
 PB11.Locked=true
 ProjectManager.DeviceId=STM32H743XIHx
 PC1.Signal=ETH_MDC
@@ -265,5 +313,7 @@ PB12.Signal=ETH_TXD0
 ProjectManager.LibraryCopy=1
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PC1.Mode=RMII
+PJ13.Signal=GPIO_Input
+PJ12.Locked=true
 PA7.Signal=ETH_CRS_DV
 PB4\ (NJTRST).Signal=DEBUG_JTRST
