--- a/example_eth/example_eth.ioc
+++ b/example_eth/example_eth.ioc
@@ -3,6 +3,7 @@ Mcu.Family=STM32H7
 LWIP0.BSP.mode=
 RCC.DIVQ2Freq_Value=32250000
 ProjectManager.MainLocation=Core/Src
+PB13.GPIOParameters=GPIO_Speed
 LWIP0.BSP.STBoard=false
 RCC.SAI1Freq_Value=400000000
 RCC.CortexFreq_Value=400000000
@@ -15,6 +16,7 @@ PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC5.Locked=true
 CORTEX_M7.TypeExtField-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_TEX_LEVEL1
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_UART4_Init-UART4-false-HAL-true,4-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+PA2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PJ3.GPIOParameters=GPIO_Label
 RCC.RTCFreq_Value=32000
 PJ6.GPIO_Label=SEGG
@@ -25,6 +27,7 @@ PC5.Mode=RMII
 PC1.Locked=true
 PB11.Signal=ETH_TX_EN
 PB13.Signal=ETH_TXD1
+PA2.GPIOParameters=GPIO_Speed
 PJ2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
 PJ5.GPIO_Label=SEGF
@@ -32,6 +35,7 @@ RCC.MCO1PinFreq_Value=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 RCC.AHB4Freq_Value=200000000
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 RCC.VCOInput3Freq_Value=500000
 LWIP.NETMASK_ADDRESS=255.255.255.000
 RCC.LPTIM1Freq_Value=100000000
@@ -51,6 +55,7 @@ PJ13.GPIO_Label=BTN2
 CORTEX_M7.IsBufferable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_BUFFERABLE
 PJ2.Signal=GPIO_Output
 Mcu.UserConstants=
+PC1.GPIOParameters=GPIO_Speed
 RCC.DIVP3Freq_Value=32250000
 RCC.SDMMCFreq_Value=400000000
 LWIP.IPParameters=MEM_SIZE,LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS
@@ -89,6 +94,7 @@ PJ12.GPIOParameters=GPIO_Label
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 RCC.DIVM1=1
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.8.0
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 MxDb.Version=DB.6.0.10
 RCC.DIVP1Freq_Value=400000000
 PA1.GPIOParameters=GPIO_Speed
@@ -151,6 +157,7 @@ PJ0.Locked=true
 CORTEX_M7.IsShareable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_SHAREABLE
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 ProjectManager.CustomerFirmwarePackage=
+PC4.GPIOParameters=GPIO_Speed
 RCC.Tim2OutputFreq_Value=200000000
 PJ1.GPIO_Label=SEGB
 PC4.Mode=RMII
@@ -203,8 +210,11 @@ PB3\ (JTDO/TRACESWO).Signal=DEBUG_JTDO-SWO
 ProjectManager.TargetToolchain=Makefile
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
 RCC.VCO1OutputFreq_Value=800000000
+PC5.GPIOParameters=GPIO_Speed
 RCC.AXIClockFreq_Value=200000000
 RCC.DIVN1=50
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB11.GPIOParameters=GPIO_Speed
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings=0x30040000
 LWIP0.BSP.instance=LAN8742
 ProjectManager.RegisterCallBack=
@@ -212,12 +222,14 @@ RCC.USBFreq_Value=400000000
 LWIP0.BSP.api=BSP_COMPONENT_DRIVER
 PA1.Signal=ETH_REF_CLK
 RCC.CKPERFreq_Value=64000000
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 LWIP0.BSP.ip=
 LWIP0.BSP.semaphore=
 PJ6.GPIOParameters=GPIO_Label
 board=custom
 PJ4.GPIO_Label=SEGE
 ProjectManager.LastFirmware=true
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 RCC.VCOInput1Freq_Value=16000000
 NVIC.SavedSystickIrqHandlerGenerated=true
 RCC.AHB12Freq_Value=200000000
@@ -232,6 +244,7 @@ Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V1
 RCC.ADCFreq_Value=32250000
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_FULL_ACCESS
 Mcu.Pin31=VP_LWIP_VS_Enabled
+PC1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 Mcu.Pin32=VP_SYS_VS_tim17
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PB4\ (NJTRST).Mode=JTAG_5_pins
@@ -275,8 +288,8 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PJ5.Signal=GPIO_Output
 ProjectManager.CompilerOptimize=6
 PJ4.Locked=true
-PJ0.GPIO_Label=SEGA
 PJ7.Locked=true
+PJ0.GPIO_Label=SEGA
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PA1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -294,6 +307,7 @@ RCC.SAI4AFreq_Value=400000000
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PH1-OSC_OUT (PH1)
 Mcu.Pin12=PH0-OSC_IN (PH0)
+PC5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB3\ (JTDO/TRACESWO).Mode=JTAG_5_pins
 Mcu.Pin10=PJ13
 RCC.DIVQ1Freq_Value=400000000
@@ -306,9 +320,11 @@ RCC.HCLK3ClockFreq_Value=200000000
 RCC.VCOInput2Freq_Value=500000
 RCC.APB1Freq_Value=100000000
 PJ2.GPIO_Label=SEGC
+PA7.GPIOParameters=GPIO_Speed
 PB11.Locked=true
 ProjectManager.DeviceId=STM32H743XIHx
 PC1.Signal=ETH_MDC
+PB12.GPIOParameters=GPIO_Speed
 PB12.Signal=ETH_TXD0
 ProjectManager.LibraryCopy=1
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
